--- a/app/src/main/res/layout/fragment_project_tab.xml
+++ b/app/src/main/res/layout/fragment_project_tab.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rlv_article"
+            android:id="@+id/rv_article"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
