--- a/app/src/main/res/layout/fragment_sys.xml
+++ b/app/src/main/res/layout/fragment_sys.xml
@@ -26,7 +26,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rlv_sys"
+            android:id="@+id/rv_sys"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
