--- a/app/src/main/res/layout/item_rv_article.xml
+++ b/app/src/main/res/layout/item_rv_article.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
@@ -19,7 +20,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_new"
-            android:visibility="invisible"
             tools:ignore="ContentDescription" />
 
 
@@ -65,7 +65,7 @@
 
 
         <TextView
-            android:id="@+id/tv_chapter"
+            android:id="@+id/tv_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -85,7 +85,11 @@
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_collect_normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription" />
     </android.support.constraint.ConstraintLayout>
+
+
 </android.support.v7.widget.CardView>
+
 
