--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -58,6 +58,7 @@
         app:max_select="0" />
 
     <TextView
+        android:id="@+id/tv_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -75,12 +76,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="@string/search_clean"
         android:textColor="@color/md_grey_500"
         android:textSize="@dimen/dp_13"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/flow_layout"
+        app:layout_constraintTop_toTopOf="@+id/tv_search"
         tools:ignore="SpUsage" />
 
     <android.support.v7.widget.RecyclerView
