--- a/app/src/main/res/layout/item_rv_search_history.xml
+++ b/app/src/main/res/layout/item_rv_search_history.xml
@@ -10,8 +10,8 @@
         android:id="@+id/clock"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_marginStart="10dp"
         android:src="@drawable/ic_clock"
+        android:layout_marginStart="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,13 +35,22 @@
 
     <ImageView
         android:id="@+id/iv_delete"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_width="13dp"
+        android:layout_height="13dp"
+        android:layout_marginEnd="2dp"
         android:src="@drawable/ic_delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/md_grey_300"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
